[tool.poetry]
name = "pygments-css"
version = "0.1.0"
description = ""
authors = ["Danny Vilela <dannyofig@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Pygments = "^2.7.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
